--- a/sites/all/themes/sarniaconnects/sass/_main.scss
+++ b/sites/all/themes/sarniaconnects/sass/_main.scss
@@ -78,7 +78,6 @@ body
 
 #header
 {	
-
 	overflow:hidden;
 	height:120px;
 
@@ -123,7 +122,6 @@ body
 
 .view-banner 
 {	
-
 	.views-row
 	{
 		height: 500px;
@@ -139,7 +137,8 @@ body
 		z-index: -10;
 	}
 
-		.views-field-body {
+	.views-field-body 
+	{
 		color: white;
 		padding:0 10px;
 		position: relative;
@@ -160,7 +159,6 @@ body
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 		}
 	}
-
 }
 
 #block-views-events-block
@@ -180,9 +178,10 @@ body
 
 	}
 
-	span.date-display-single {
-	font-size: 24px;
-	font-weight: bold;
+	span.date-display-single 
+	{
+		font-size: 24px;
+		font-weight: bold;
 	}
 
 	.views-field-field-hosted-by
@@ -203,6 +202,7 @@ body
 #footer
 {	
 	padding: 20px 0px 60px;
+
 	.region-footer
 	{
 		position: relative;
@@ -372,6 +372,10 @@ body
 	background-color:$blue;
 	text-align:center;
 
+	.content
+	{
+		padding:30px 0px;
+	}
 }
 
 
