--- a/sites/all/themes/sarniaconnects/css/screen.css
+++ b/sites/all/themes/sarniaconnects/css/screen.css
@@ -11,6 +11,9 @@ input, select, textarea, button {
 .front #content {
   display: none; }
 
+#content {
+  padding: 10px; }
+
 body {
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -90,9 +93,7 @@ body {
   right: 10px; }
 
 #main_page_section {
-  background-image: url(../images/Banner1.jpg);
-  height: 500px;
-  background-size: cover; }
+  height: 500px; }
 
 #main-wrapper {
   clear: left; }
@@ -173,19 +174,30 @@ body {
   #footer-bottom a:hover {
     text-decoration: underline; }
 
-#block-webform-client-block-4 {
+#edit-submitted-email-newsletter-selection {
+  display: none; }
+
+#block-webform-client-block-4,
+#block-simplenews-1 {
   padding-left: 80px;
   position: absolute;
-  bottom: 65px;
+  bottom: 62px;
   right: 0;
   width: 45%; }
-  #block-webform-client-block-4 h2 {
+  #block-webform-client-block-4 h2,
+  #block-simplenews-1 h2 {
     font-size: 1.8em;
     padding-left: 0px; }
-  #block-webform-client-block-4 .form-item-submitted-email-newsletter-email-address {
+  #block-webform-client-block-4 .form-item-submitted-email-newsletter-email-address,
+  #block-webform-client-block-4 .form-item-mail,
+  #block-simplenews-1 .form-item-submitted-email-newsletter-email-address,
+  #block-simplenews-1 .form-item-mail {
     position: relative;
     margin: 35px 0px; }
-    #block-webform-client-block-4 .form-item-submitted-email-newsletter-email-address:before {
+    #block-webform-client-block-4 .form-item-submitted-email-newsletter-email-address:before,
+    #block-webform-client-block-4 .form-item-mail:before,
+    #block-simplenews-1 .form-item-submitted-email-newsletter-email-address:before,
+    #block-simplenews-1 .form-item-mail:before {
       content: url(../images/mail-box.png);
       display: block;
       position: absolute;
@@ -193,7 +205,13 @@ body {
       height: 30px;
       bottom: 5px;
       left: 15px; }
-  #block-webform-client-block-4 #edit-submitted-email-newsletter-email-address {
+  #block-webform-client-block-4 label,
+  #block-simplenews-1 label {
+    display: none; }
+  #block-webform-client-block-4 #edit-submitted-email-newsletter-email-address,
+  #block-webform-client-block-4 #edit-mail,
+  #block-simplenews-1 #edit-submitted-email-newsletter-email-address,
+  #block-simplenews-1 #edit-mail {
     border: 0px;
     width: 84%;
     border-radius: 7px;
@@ -203,7 +221,8 @@ body {
     color: white;
     font-size: 18px;
     padding-left: 50px; }
-  #block-webform-client-block-4 .form-submit {
+  #block-webform-client-block-4 .form-submit,
+  #block-simplenews-1 .form-submit {
     background: transparent;
     color: white;
     font-size: 22px;
@@ -213,26 +232,23 @@ body {
     width: 200px;
     font-weight: bold;
     text-transform: uppercase;
+    cursor: pointer;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5); }
-  #block-webform-client-block-4 .content {
+  #block-webform-client-block-4 .content,
+  #block-simplenews-1 .content {
     padding: 0px; }
-  #block-webform-client-block-4 ::-webkit-input-placeholder {
+  #block-webform-client-block-4 ::-webkit-input-placeholder,
+  #block-simplenews-1 ::-webkit-input-placeholder {
     color: white; }
-  #block-webform-client-block-4 :-moz-placeholder {
+  #block-webform-client-block-4 :-moz-placeholder,
+  #block-simplenews-1 :-moz-placeholder {
     color: white; }
-  #block-webform-client-block-4 ::-moz-placeholder {
+  #block-webform-client-block-4 ::-moz-placeholder,
+  #block-simplenews-1 ::-moz-placeholder {
     color: white; }
-  #block-webform-client-block-4 :-ms-input-placeholder {
+  #block-webform-client-block-4 :-ms-input-placeholder,
+  #block-simplenews-1 :-ms-input-placeholder {
     color: white; }
-
-.parallax {
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  -ms-behavior: url("/sites/all/themes/greatlakes/css/backgroundsize.htc"); }
 
 .overlay {
   display: none;
@@ -263,7 +279,9 @@ body {
 
 #block-views-banner-block {
   position: fixed;
-  width: 100%; }
+  width: 100%;
+  background-image: url(../images/Banner1.jpg);
+  background-size: cover; }
 
 #header-inner {
   max-width: 942px;
@@ -289,6 +307,12 @@ body {
   background: white;
   display: none; }
 
+@media screen and (max-width: 1100px) {
+  #block-views-banner-block {
+    position: relative; }
+
+  #header > div {
+    z-index: 99; } }
 @media screen and (max-width: 940px) {
   #footer #block-webform-client-block-4 {
     padding-left: 40px; }
@@ -323,13 +347,13 @@ body {
         text-align: center; } }
 @media screen and (min-width: 561px) {
   #block-system-main-menu {
-    display: block; } }
+    display: block !important; } }
 @media screen and (max-width: 560px) {
-  #region1, #region2, #footer {
-    z-index: 999; }
+  #header .region-header {
+    padding-top: 20px; }
 
   .view-banner .views-field-body .field-content {
-    font-size: 1.5em; }
+    font-size: 20px; }
 
   #footer #block-webform-client-block-4 #edit-submitted-email-newsletter-email-address {
     width: 80%; }
@@ -344,6 +368,12 @@ body {
       color: #007bc0;
       text-decoration: none;
       display: block; }
+
+  #main_page_section {
+    height: 300px; }
+
+  .view-banner .views-row {
+    height: 300px; }
 
   #block-system-main-menu {
     display: none; }
