--- a/sites/all/themes/sarniaconnects/sass/_responsive.scss
+++ b/sites/all/themes/sarniaconnects/sass/_responsive.scss
@@ -1,3 +1,16 @@
+@media screen and (max-width:1100px)
+{
+	#block-views-banner-block
+	{
+		position: relative;
+	}
+
+	#header > div
+	{
+		z-index: 99;
+	}
+}
+
 @media screen and (max-width:940px)
 {
 	#footer #block-webform-client-block-4
@@ -45,6 +58,7 @@
 		{
 			float: none;
 			text-align: center;
+
 		}
 		.region-header
 		{
@@ -65,20 +79,20 @@
 
 	#block-system-main-menu
 	{
-		display: block;
+		display: block!important;
 	}
 }
 
 @media screen and (max-width:560px)
 {	
-	#region1, #region2, #footer
+	#header .region-header
 	{
-		z-index: 999;
+		padding-top:20px;
 	}
-
+	
 	.view-banner .views-field-body .field-content
 	{
-		font-size: 1.5em;
+		font-size: 20px
 	}
 
 	#footer #block-webform-client-block-4 #edit-submitted-email-newsletter-email-address
@@ -101,6 +115,17 @@
 			display: block;
 			
 		}
+	}
+
+	#main_page_section
+	{
+		height: 300px;
+	}
+
+
+	.view-banner .views-row
+	{
+		height: 300px;
 	}
 
 	#block-system-main-menu
