--- a/sites/all/themes/sarniaconnects/sass/_main.scss
+++ b/sites/all/themes/sarniaconnects/sass/_main.scss
@@ -220,6 +220,7 @@ body
 	.content
 	{
 		padding-bottom: 80px;
+		padding-left:0px;
 	}
 
 	img
@@ -233,6 +234,11 @@ body
 #block-block-3
 {
 	display:inline-block;
+
+	h2
+	{
+		padding-left:0px;
+	}
 }
 
 
