--- a/sites/all/themes/sarniaconnects/css/screen.css
+++ b/sites/all/themes/sarniaconnects/css/screen.css
@@ -12,7 +12,10 @@ input, select, textarea, button {
   display: none; }
 
 #content {
-  padding: 10px; }
+  padding: 10px;
+  min-height: 300px;
+  margin-top: 10px;
+  border-top: 4px solid #007bc0; }
 
 body {
   font-family: 'Raleway', sans-serif;
