--- a/sites/all/themes/sarniaconnects/sass/_main.scss
+++ b/sites/all/themes/sarniaconnects/sass/_main.scss
@@ -9,6 +9,13 @@
 	min-height: 300px;
 	margin-top: 10px;
 	border-top: 4px solid $blue;
+
+	#block-system-main
+	{
+		max-width: 942px;
+		margin: 50px auto;
+	}
+	
 }
 
 body
