--- a/sites/all/themes/sarniaconnects/css/screen.css
+++ b/sites/all/themes/sarniaconnects/css/screen.css
@@ -38,7 +38,7 @@ body {
   position: relative;
   background: #007bc0;
   color: white;
-  padding: 40px 0px; }
+  padding: 80px 0px; }
   #region1 h2,
   #region2 h2,
   #footer h2 {
@@ -73,15 +73,16 @@ body {
   #footer .content {
     padding: 60px 10px 0px; }
 
-#region1 {
-  padding-top: 80px; }
+#region2 {
+  padding-top: 0; }
 
 #header > div {
   position: fixed;
   width: 100%;
   padding: 21px 0px;
   background: white;
-  border-top: 4px solid #007bc0; }
+  border-top: 4px solid #007bc0;
+  z-index: 99; }
 
 #header {
   overflow: hidden;
@@ -318,10 +319,7 @@ body {
 
 @media screen and (max-width: 1100px) {
   #block-views-banner-block {
-    position: relative; }
-
-  #header > div {
-    z-index: 99; } }
+    position: relative; } }
 @media screen and (max-width: 940px) {
   #footer #block-webform-client-block-4 {
     padding-left: 40px; }
@@ -366,9 +364,6 @@ body {
 
   #footer #block-webform-client-block-4 #edit-submitted-email-newsletter-email-address {
     width: 80%; }
-
-  #header > div {
-    z-index: 99; }
 
   #block-block-5 {
     display: block;
