--- a/sites/all/themes/sarniaconnects/sass/_main.scss
+++ b/sites/all/themes/sarniaconnects/sass/_main.scss
@@ -115,6 +115,17 @@ body
 	position: absolute;
 	top: 10px;
 	right: 10px;
+	
+	a
+	{
+		display: block;
+		padding: 0 10px;
+		float: left;
+	}
+	img
+	{
+		vertical-align: middle;
+	}
 }
 
 #main_page_section
