--- a/sites/all/themes/sarniaconnects/css/screen.css
+++ b/sites/all/themes/sarniaconnects/css/screen.css
@@ -25,12 +25,15 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: 18px; }
 
-#block-system-main-menu li {
-  display: inline-block; }
-  #block-system-main-menu li a {
-    text-decoration: none;
-    color: #007bc0;
-    font-size: 22px; }
+#block-system-main-menu {
+  float: right; }
+  #block-system-main-menu li {
+    display: inline-block;
+    list-style: none; }
+    #block-system-main-menu li a {
+      text-decoration: none;
+      color: #007bc0;
+      font-size: 22px; }
 
 #region1,
 #region2,
@@ -91,17 +94,18 @@ body {
     float: left; }
   #header .region-header {
     float: right;
-    padding-top: 50px;
+    padding-top: 25px;
     position: relative; }
 
 #block-block-1 {
-  position: absolute;
-  top: 10px;
-  right: 10px; }
+  float: right;
+  margin-left: 10px; }
   #block-block-1 a {
     display: block;
     padding: 0 10px;
-    float: left; }
+    float: left;
+    height: 32px;
+    line-height: 32px; }
   #block-block-1 img {
     vertical-align: middle; }
 
@@ -344,10 +348,6 @@ body {
     padding-top: 40px;
     width: 100%; }
 
-  #block-block-1 {
-    top: auto;
-    bottom: 0px; }
-
   #header {
     height: 179px; }
     #header #logo {
@@ -355,12 +355,8 @@ body {
       text-align: center; }
     #header .region-header {
       float: none;
-      padding-top: 35px; }
-      #header .region-header ul.menu {
-        text-align: center; } }
-@media screen and (min-width: 561px) {
-  #block-system-main-menu {
-    display: block !important; } }
+      width: 360px;
+      margin: 0 auto; } }
 @media screen and (max-width: 560px) {
   #header {
     height: 73px; }
@@ -375,7 +371,8 @@ body {
     #header .region-header {
       float: right;
       padding-top: 0;
-      position: static; }
+      position: static;
+      width: auto; }
     #header .block {
       float: left; }
 
@@ -418,10 +415,10 @@ body {
     background: white;
     padding-bottom: 10px; }
     #block-system-main-menu li {
-      list-style: none;
       display: block;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      text-align: center; }
       #block-system-main-menu li a {
         display: block;
         padding: 10px 0px; } }
