--- a/sites/all/themes/sarniaconnects/sass/_responsive.scss
+++ b/sites/all/themes/sarniaconnects/sass/_responsive.scss
@@ -39,12 +39,6 @@
 		width:100%;
 	}
 
-	#block-block-1
-	{	
-		top:auto;
-		bottom:0px;
-	}
-
 	#header 
 	{	
 
@@ -58,24 +52,11 @@
 		.region-header
 		{
 			float: none;
-			padding-top:35px;
-
-			ul.menu
-			{
-				text-align:center;
-			}
+			width: 360px;
+			margin: 0 auto;
 		}
 	}
 	
-}
-
-@media screen and (min-width:561px)
-{	
-
-	#block-system-main-menu
-	{
-		display: block!important;
-	}
 }
 
 @media screen and (max-width:560px)
@@ -104,6 +85,7 @@
 			float: right;
 			padding-top: 0;
 			position: static;
+			width: auto;
 		}
 		.block
 		{
@@ -170,10 +152,10 @@
 
 		li
 		{
-			list-style: none;
 			display: block;
 			margin: 0;
 			padding: 0;
+			text-align: center;
 
 			a
 			{
