--- a/sites/all/themes/sarniaconnects/sass/_main.scss
+++ b/sites/all/themes/sarniaconnects/sass/_main.scss
@@ -1,27 +1,5 @@
-.front #content
-{
-	display:none;
-}
-
-#content
-{
-	padding:10px;
-	min-height: 300px;
-	margin-top: 10px;
-	border-top: 4px solid $blue;
-
-	#block-system-main
-	{
-		max-width: 942px;
-		margin: 50px auto;
-	}
-	
-}
-
 body
 {
-	font-family: 'Raleway', sans-serif;
-	-webkit-font-smoothing:antialiased;
 	font-size:18px;
 	background:$blue;
 	color:white;
@@ -41,6 +19,26 @@ p
 {
 	padding-bottom: 15px;
 	line-height: 1.8em;
+}
+
+.front #content
+{
+	display:none;
+}
+
+#content
+{
+	padding:10px;
+	min-height: 300px;
+	margin-top: 10px;
+	border-top: 4px solid $blue;
+
+	#block-system-main
+	{
+		max-width: 942px;
+		margin: 50px auto;
+	}
+	
 }
 
 #block-system-main-menu
@@ -208,30 +206,23 @@ p
 	{
 		font-size: 2.3em;
 	}
-
-	h2
-	{
-		font-weight: normal;
-
-	}
-
-	span.date-display-single 
+	.views-field-field-date
 	{
 		font-size: 24px;
 		font-weight: bold;
 	}
 
-	.views-field-field-hosted-by
+	.views-field-nothing
 	{
-		padding-top:60px;
-
-		img
-		{
-			vertical-align: middle;
-			padding-right: 30px;
-			padding-bottom: 10px;
-			padding-top: 20px;
-		}
+		padding-top: 60px;
+		padding-bottom: 20px;
+	}
+	.views-field-field-event-sponsor-website,
+	.views-field-field-venue-sponsor-website
+	{
+		display: inline-block;
+		padding-right: 30px;
+		vertical-align: middle;
 	}
 }
 
